src/test/ui/const-generics/min_const_generics/static-reference-array-const-param.stderr
error: `&'static [u32]` is forbidden as the type of a const generic parameter
  --> $DIR/static-reference-array-const-param.rs:1:15
   |
LL | fn a<const X: &'static [u32]>() {}
   |               ^^^^^^^^^^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = help: more complex types are supported with `#[feature(const_generics)]`

error: aborting due to previous error

