src/test/ui/const-generics/min_const_generics/static-reference-array-const-param.rs
fn a<const X: &'static [u32]>() {}
//~^ ERROR `&'static [u32]` is forbidden as the type of a const generic parameter

fn main() {
    a::<{&[]}>();
}
